fixed overflow

--- a/src/styles/components/_task-activity.scss
+++ b/src/styles/components/_task-activity.scss
@@ -2,5 +2,61 @@
     .activity {
         padding: 10px 0;
         border-bottom: 1px solid $clr4;
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+        position: relative;
+    }
+
+    .avatar-title-wrapper {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        grid-column: 2 / 3;
+
+
+        .popup-container{
+            &[data-title]::after {
+                content: attr(data-title);
+                visibility: hidden;
+                clip-path: polygon(0% 0%, 100% 0, 100% 75%, 59% 75%, 51% 100%, 41% 75%, 0% 75%);
+                position: absolute;
+                font-size: 14px;
+                bottom: 75%;
+                left: 30%;
+                transform: translate(-25%, -5%);
+                background-color: #323338;
+                color: rgb(240, 234, 234);
+                height: 0px;
+                transition: height 0.3s linear;
+            }
+            
+            &[data-title]:hover::after {
+                padding: 0 15px;
+                padding-bottom: 14px;
+                padding-top: 4px;
+                width: auto;
+                height: 25px;
+                opacity: 1;
+                visibility: visible;
+            }
+    
+        }
+        
+        .activity-title {
+            margin-left: 15px;
+            position: relative;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            max-width: 200px;
+            overflow: hidden;
+        }
+        .activity-time{
+           grid-column: 1 / 2;
+           
+        }
+        .activity-action{
+           grid-column: 3 / 4;
+        }
+
     }
 }
